<resources>
    <string name="app_name">5kmx</string>

    <string name="at_appname_text">at 5kmx</string>

    <string name="action_settings">Setting</string>
    <string name="action_edit">Edit</string>
    <string name="action_rating">Like</string>
    <string name="action_unrating">Unlike</string>
    <string name="action_help">Help</string>
    <string name="action_term">Terms &amp; Condition</string>
    <string name="action_privacy">Privacy Policy</string>
    <string name="action_seftey">Safety</string>
    <string name="action_rule">Rules</string>
    <string name="title_activity_home_fragment">Home</string>
    <string name="title_activity_product_detail">Product Detail</string>
    <string name="title_activity_home">Home</string>

    <string name="please_wait">Please Wait...</string>
    <string name="loading">Loading</string>
    <string name="error_timeout_message">There is an error during communication with the server</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="app_description">Android drawer icon with material design animation</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="error_unable_to_connect">Not able to connect, Please check your network settings.</string>
    <string name="app_id">458947780954673</string>
    <string name="title_activity_user_register_login">UserRegisterLoginActivity</string>
    <string name="title_activity_user_register_fragment">UserRegisterFragment</string>
    <string name="title_activity_user_login_fragment">UserLoginFragment</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_cell_aproduct">CellAProduct</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="title_activity_location_map">Location Map</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_dont_match_password">Password do not match</string>
    <string name="error_field_password_lenght">Password Min Length Should be 6 Character</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_limit_required_title">Minimum title length should be 2</string>
    <string name="error_field_limit_required_description">Minimum description length should be 30</string>
    <string name="error_field_price_required_title">Maximum Price Length Should be 8 Digit</string>
    <string name="title_activity_location">Location</string>

    <string name="miles_text">Displaying Ads within %1$s Kms From You</string>
    <string-array name="nav_drawer_labels">
        <item>Chat</item>
        <item>Notifications</item>
        <item>New Collections</item>
        <item>Categories</item>
        <item>New in Your Area</item>
        <item>Invite your friends</item>
        <item>Help</item>
    </string-array>


    <string-array name="currency">
        <item> Rs </item>
        <!--<item>USD ($)</item>-->
        <!--<item>EUR (€)</item>-->
        <!--<item>GBP (£)</item>-->
        <!--<item>JPY (¥)</item>-->
        <!--<item>CNY (Ұ)</item>-->
    </string-array>

    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_term_condition">TermConditionActivity</string>
    <string name="title_activity_privacy_policy">PrivacyPolicyActivity</string>
    <string name="title_activity_safety">SafetyActivity</string>
    <string name="title_activity_rules">RulesActivity</string>
    <string name="sell_an_item_text">Sell an Item</string>
    <string name="title_activity_notification">Notification</string>
    <string name="title_activity_collection">CollectionActivity</string>
    <string name="title_activity_product_all_details">ProductAllDetails</string>
    <string name="loren_ipsum">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia. Nam pretium turpis et arcu. Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Praesent adipiscing. Phasellus ullamcorper ipsum rutrum nunc. Nunc nonummy metus. Vestibulum volutpat pretium libero. Cras id dui. Aenean ut eros et nisl sagittis vestibulum. Nullam nulla eros, ultricies sit amet, nonummy id, imperdiet feugiat, pede. Sed lectus. Donec mollis hendrerit risus. Phasellus nec sem in justo pellentesque facilisis. Etiam imperdiet imperdiet orci. Nunc nec neque. Phasellus leo dolor, tempus non, auctor et, hendrerit quis, nisi. Curabitur ligula sapien, tincidunt non, euismod vitae, posuere imperdiet, leo. Maecenas malesuada. Praesent congue erat at massa. Sed cursus turpis vitae tortor. Donec posuere vulputate arcu. Phasellus accumsan cursus velit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed aliquam, nisi quis porttitor congue, elit erat euismod orci, ac placerat dolor lectus quis orci. Phasellus consectetuer vestibulum elit. Aenean tellus metus, bibendum sed, posuere ac, mattis non, nunc. Vestibulum fringilla pede sit amet augue. In turpis. Pellentesque posuere. Praesent turpis. Aenean posuere, tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus. Donec elit libero, sodales nec, volutpat a, suscipit non, turpis. Nullam sagittis. Suspendisse pulvinar, augue ac venenatis condimentum, sem libero volutpat nibh, nec pellentesque velit pede quis nunc. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce id purus. Ut varius tincidunt libero. Phasellus dolor. Maecenas vestibulum mollis diam. Pellentesque ut neque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In dui magna, posuere eget, vestibulum et, tempor auctor, justo. In ac felis quis tortor malesuada pretium. Pellentesque auctor neque nec urna. Proin sapien ipsum, porta a, auctor quis, euismod ut, mi. Aenean viverra rhoncus pede. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut non enim eleifend felis pretium feugiat. Vivamus quis mi. Phasellus a est. Phasellus magna. In hac habitasse platea dictumst. Curabitur at lacus ac velit ornare lobortis. Curabitur a felis in nunc fringilla tristique.</string>
    <string name="title_activity_sold_api">Post your review</string>
    <string name="title_activity_report_this_product">ReportThisProduct</string>
    <string name="title_activity_report_feedback">ReportFeedback</string>
    <string name="title_activity_profileedit">Profile Edition</string>
    <string name="title_activity_identity">Identity Verification</string>
    <string name="title_activity_favorite">Favourite Categories</string>
    <string name="title_activity_userprofile">User profile</string>
    <string name="title_activity_thanks">Thanku</string>
    <string name="title_activity_fielter">Filters</string>
    <string name="title_activity_facebook_verfication">FacebookVerficationActivity</string>
    <string name="title_activity_phone_verification">PhoneVerificationActivity</string>
    <string name="title_activity_identi_verification">IdentiVerificationActivity</string>
    <string name="title_activity_mobile_num_verification">MobileNumVerificationActivity</string>
    <string name="title_activity_verify_email">VerifyEmailActivity</string>
    <string name="title_activity_mink_box_notification">5kmxNotification</string>
    <string name="title_activity_thanku_email">ThankuEmailActivity</string>
    <string name="title_activity_user_notification">UserNotification</string>
    <string name="title_activity_googleplus_verification">GoogleplusVerificationActivity</string>
    <string name="title_activity_email_verification">EmailVerificationActivity</string>
    <string name="title_activity_location_fielter">LocationFielterActivity</string>
    <string name="title_activity_my_place_edit_profile">MyPlaceEditProfileActivity</string>
    <string name="title_activity_favourite_category">FavouriteCategoryActivity</string>
    <string name="title_activity_thanku_phone">ThankuPhoneActivity</string>
    <string name="title_activity_update_product">UpdateProduct</string>
    <string name="title_activity_my_locationmap_update">MyLocationmapUpdate</string>
    <string name="title_activity_other_user_profile">OtherUserProfile</string>
    <string name="title_activity_report_user">ReportUser</string>
    <string name="title_activity_full_screen_product_image_slider">FullScreenProductImageSlider
    </string>
    <string name="menu_lock">Lock</string>
    <string name="menu_unlock">Unlock</string>
    <string name="title_activity_my_product_location_update">MyProductLocationUpdate</string>
    <string name="title_activity_faq">FAQActivity</string>

    <string name="server_registering">DeviceRegister</string>
    <string name="server_register_error">Error Registration</string>
    <string name="server_unregistered">Error Registration</string>
    <string name="gcm_unregistered">UnRegistration</string>
    <string name="gcm_deleted">DeviceDeleted</string>
    <string name="gcm_error">Error</string>
    <string name="gcm_recoverable_error">Recoverable Error</string>
    <string name="title_activity_conversations">Conversations</string>
    <string name="title_activity_full_user_image">FullUserImageActivity</string>
    <string name="takepic">Camera</string>
    <string name="opengallery">Gallery</string>
    <string name="title_activity_twitter_">Twitter_Activity</string>

    <string name="identity_verification_create_trust_text">Verifying your identity creates trust and credibility in the 5kmx community</string>
    <string name="appname_rules_text">5kmx Rules</string>
    <string name="appname_on_twitter_text">5kmx on Twitter</string>
    <string name="appname_on_fb_text">5kmx on Facebook</string>
    <string name="Rs">\u20B9</string>
</resources>
