<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.minkbox.UserRegisterLoginActivity">
    <item
        android:id="@+id/termcondition"
        android:title="@string/action_term"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item
        android:id="@+id/privacy"
        android:title="@string/action_privacy"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item
        android:id="@+id/safety"
        android:title="@string/action_seftey"
        android:orderInCategory="4"
        app:showAsAction="never" />
    <item
        android:id="@+id/rules"
        android:title="@string/action_rule"
        android:orderInCategory="5"
        app:showAsAction="never" />
</menu>
